--- a/package.json
+++ b/package.json
@@ -3,12 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.0.0",
+    "history": "^4.7.2",
+    "moment": "^2.23.0",
+    "node-sass": "^4.11.0",
+    "normalizr": "^3.3.0",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
+    "react-addons-update": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-loadable": "^5.5.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2",
+    "redux": "^4.0.1",
+    "redux-act": "^1.7.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "universal-cookie": "^3.0.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "DEBUG=1 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -21,5 +44,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "peerDependencies": {
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6"
+  }
 }
